@@ -195,14 +195,21 @@ import (int argc, char **argv)
      * Could abstract this to valid_module_path, but I don't think we'll need
      * to call it from anywhere else.
      */
-    if ((cp = strstr (argv[0], "CVS")) &&   /* path contains "CVS" AND ... */
-        ((cp == argv[0]) || ISSLASH (*(cp-1))) && /* /^CVS/ OR m#/CVS# AND ... */
-        ((*(cp+3) == '\0') || ISSLASH (*(cp+3))) /* /CVS$/ OR m#CVS/# */
-       )
+    /* for each "CVS" in path */
+    cp = argv[0];
+    while ((cp = strstr (cp, "CVS")))
     {
-        error (0, 0,
-               "The word `CVS' is reserved by CVS and may not be used");
-        error (1, 0, "as a directory in a path or as a file name.");
+	if (/* /^CVS/ OR m#/CVS#... */
+	    (cp == argv[0] || ISSLASH (*(cp-1)))
+	    /* ...AND /CVS$/ OR m#CVS/# */
+	    && (*(cp+3) == '\0' || ISSLASH (*(cp+3)))
+	   )
+	{
+	    error (0, 0,
+		   "The word `CVS' is reserved by CVS and may not be used");
+	    error (1, 0, "as a directory in a path or as a file name.");
+	}
+	cp +=3 ;
     }
 
     for (i = 1; i < argc; i++)		/* check the tags for validity */
