@@ -10538,7 +10538,11 @@ ${log_keyid}add
 	  mkdir import-CVS
 	  cd import-CVS
 	  touch file1 file2 file3
-	  dotest_fail import-CVS-1 "$testcvs import CVS vtag rtag" \
+	  dotest_fail import-CVS-1 "$testcvs import -mimport CVS vtag rtag" \
+"$CPROG import: The word \`CVS' is reserved by CVS and may not be used
+$CPROG \[import aborted\]: as a directory in a path or as a file name\."
+	  dotest_fail import-CVS-1b \
+"$testcvs import -mimport CVS-/CVS vtag rtag" \
 "$CPROG import: The word \`CVS' is reserved by CVS and may not be used
 $CPROG \[import aborted\]: as a directory in a path or as a file name\."
 	  mkdir sdir
