@@ -35,6 +35,9 @@ acceptable repositories to be specified using a list of regular expressions.
 
 BUG FIXES
 
+* `cvs import' makes more of an effort not to import paths containing files
+  and directories named "CVS".
+
 * The CVS server will no longer allow clients to run `cvs init'.
 
 * Applying diffs when checking out very old revisions has been reduced from an
